--- a/misc/darkitems.html
+++ b/misc/darkitems.html
@@ -46,6 +46,248 @@ sources:
     note: fallback text and beta item menu
 credits: >
   <p>Compiled by wovenstarlight.</p>
+close_toc: true
+toc:
+  -
+    name: First seen in Chapter 1
+    subheadings:
+      -
+        id: darkcandy
+        name: Dark Candy
+      -
+        id: darkercandy
+        name: Darker Candy
+      -
+        id: revivemint
+        name: Revive Mint
+      -
+        id: glowshard
+        name: Glowshard
+      -
+        id: manual
+        name: Manual
+      -
+        id: brokencakeunused
+        name: Broken Cake
+      -
+        id: topcake
+        name: Top Cake
+      -
+        id: spincake
+        name: Spin Cake
+      -
+        id: darkburger
+        name: Darkburger
+      -
+        id: lancercookie
+        name: Lancer Cookie
+      -
+        id: gigasalad
+        name: Giga Salad
+      -
+        id: clubssandwich
+        name: Clubs Sandwich
+      -
+        id: heartsdonut
+        name: Hearts Donut
+      -
+        id: chocodiamond
+        name: Choco Diamond
+      -
+        id: favoritesandwich
+        name: Favorite Sandwich
+      -
+        id: rouxlsroux
+        name: Rouxls Roux
+  -
+    name: First seen in Chapter 2
+    subheadings:
+      -
+        id: cdbagel
+        name: CD Bagel
+      -
+        id: mannequin
+        name: Mannequin
+      -
+        id: kristea
+        name: Kris Tea
+      -
+        id: noelletea
+        name: Noelle Tea
+      -
+        id: ralseitea
+        name: Ralsei Tea
+      -
+        id: susietea
+        name: Susie Tea
+      -
+        id: rottentea
+        name: Rotten Tea
+      -
+        id: ddburger
+        name: DD-Burger
+      -
+        id: lightcandy
+        name: Light Candy
+      -
+        id: butlerjuice
+        name: Butler Juice
+      -
+        id: spaghetticode
+        name: Spaghetti Code
+      -
+        id: javacookie
+        name: Java Cookie
+      -
+        id: tensionbit
+        name: Tension Bit
+      -
+        id: tensiongem
+        name: Tension Gem
+      -
+        id: tensionmax
+        name: Tension Max
+      -
+        id: revivedust
+        name: Revive Dust
+      -
+        id: revivebrite
+        name: Revive Brite
+      -
+        id: spoison
+        name: S.POISON
+      -
+        id: dogdollar
+        name: Dog Dollar
+  -
+    name: First seen in Chapter 3
+    subheadings:
+      -
+        id: tvdinner
+        name: TV Dinner
+      -
+        id: pipis
+        name: Pipis
+      -
+        id: flatsoda
+        name: Flat Soda
+      -
+        id: tvslop
+        name: TV Slop
+      -
+        id: execbuffet
+        name: Exec Buffet
+      -
+        id: deluxedinner
+        name: Deluxe Dinner
+  -
+    name: First seen in Chapter 4
+    subheadings:
+      -
+        id: ancientsweet
+        name: Ancient Sweet
+      -
+        id: rhapsotea
+        name: Rhapsotea
+      -
+        id: scarlixir
+        name: Scarlixir
+      -
+        id: bittertear
+        name: Bitter Tear
+  -
+    name: Key items
+    subheadings:
+      -
+        id: cellphone
+        name: Cell Phone
+      -
+        id: egg
+        name: Egg
+      -
+        id: brokencake
+        name: Broken Cake
+      -
+        id: brokenkeya
+        name: Broken Key A
+      -
+        id: doorkey
+        name: Door Key
+      -
+        id: brokenkeyb
+        name: Broken Key B
+      -
+        id: brokenkeyc
+        name: Broken Key C
+      -
+        id: lancer
+        name: Lancer
+      -
+        id: rouxlskaard
+        name: Rouxls Kaard
+      -
+        id: emptydisk
+        name: Empty Disk
+      -
+        id: loadeddisk
+        name: Loaded Disk
+      -
+        id: keygen
+        name: KeyGen
+      -
+        id: shadowcrystal
+        name: Shadow Crystal
+      -
+        id: starwalker
+        name: Starwalker
+      -
+        id: purecrystal
+        name: Pure Crystal
+      -
+        id: oddcontroller
+        name: Odd Controller
+      -
+        id: backstagepass
+        name: Backstage Pass
+      -
+        id: tripticket
+        name: Trip Ticket
+      -
+        id: lancercontroller
+        name: Lancer Controller
+      -
+        id: sheetmusic
+        name: Sheet Music
+      -
+        id: claimbclaws
+        name: Claimb Claws
+  -
+    id: special
+    name: Special messages
+    subheadings:
+      -
+        id: hammerofjustice
+        name: Using items in the Hammer of Justice encounter (Chapter 4)
+      -
+        id: betaitem
+        name: Beta item menu
+        subheadings:
+          -
+            id: fallbacks
+            name: Fallbacks
+            subheadings:
+              -
+                id: iteminvalid
+                name: Invalid item ID
+              -
+                id: itemdefault
+                name: Default (null) item
+          -
+            id: darkcandybeta
+            name: Dark Candy (beta version)
+          -
+            id: lifedew
+            name: Life Dew
 ---
 <section class="d-section" id="darkcandy"> <!-- id 1 -->
 	<h2>Dark Candy</h2>
@@ -3042,7 +3284,7 @@ credits: >
 	
 	<hr>
 
-	<h3>Old item format</h3>
+	<h3 id="betaitem">Beta item menu</h3>
 	<p>Eloquently named "itemdesc_oldtype", the below text is from what appears to be a beta version of the item menu.</p>
 
 	<h4 id="fallbacks">Fallbacks</h4>
@@ -3052,7 +3294,7 @@ credits: >
 		<d-text asterisk>It could not be.</d-text>
 	</d-box>
 
-	<h5 id="item0">Default (null) item</h5>
+	<h5 id="itemdefault">Default (null) item</h5>
 	<p>Plays when the unused item ID 0 is provided, probably for testing purposes.</p>
 	<d-box theme="battlemenu">
 		<d-text asterisk>An emptiness filled your hands.</d-text>
