--- a/misc/equipment.html
+++ b/misc/equipment.html
@@ -15,6 +15,236 @@ sources:
     chapters: [4]
 credits: >
   <p>Compiled by wovenstarlight.</p>
+close_toc: true
+toc:
+  -
+    id: swords
+    name: Kris's swords
+    subheadings:
+      -
+        id: woodblade
+        name: Wood Blade
+      -
+        id: spookysword
+        name: Spookysword
+      -
+        id: trefoil
+        name: Trefoil
+      -
+        id: twistedsword
+        name: Twisted Sword
+      -
+        id: bounceblade
+        name: Bounce Blade
+      -
+        id: mechasaber
+        name: Mecha Saber
+      -
+        id: saber10
+        name: Saber 10
+      -
+        id: winglade
+        name: Winglade
+  -
+    id: axes
+    name: Susie's axes
+    subheadings:
+      -
+        id: maneax
+        name: Mane Ax
+      -
+        id: braveax
+        name: Brave Ax
+      -
+        id: devilsknife
+        name: Devilsknife
+      -
+        id: autoaxe
+        name: Auto Axe
+      -
+        id: toxicaxe
+        name: Toxic Axe
+      -
+        id: justiceaxe
+        name: Justice Axe
+      -
+        id: absorbax
+        name: Absorb Ax
+  -
+    id: scarves
+    name: Ralsei's scarves
+    subheadings:
+      -
+        id: redscarf
+        name: Red Scarf
+      -
+        id: ragger
+        name: Ragger
+      -
+        id: daintyscarf
+        name: Dainty Scarf
+      -
+        id: cheerscarf
+        name: Cheer Scarf
+      -
+        id: fiberscarf
+        name: Fiber Scarf
+      -
+        id: ragger2
+        name: Ragger 2
+      -
+        id: puppetscarf
+        name: Puppet Scarf
+      -
+        id: flexscarf
+        name: Flex Scarf
+      -
+        id: scarfmark
+        name: Scarf Mark
+  -
+    id: rings
+    name: Noelle's rings
+    subheadings:
+      -
+        id: snowring
+        name: Snow Ring
+      -
+        id: thornring
+        name: Thorn Ring
+      -
+        id: freezering
+        name: Freeze Ring
+  -
+    id: other
+    name: Other weapons
+    subheadings:
+      -
+        id: everybodyweapon
+        name: Everybody Weapon
+      -
+        id: brokensword
+        name: Broken Sword
+      -
+        id: blackshard
+        name: Black Shard
+      -
+        id: jingleblade
+        name: Jingle Blade
+  -
+    id: armor
+    name: Armor
+    subheadings:
+      -
+        id: remove
+        name: Attempting to remove armor
+      -
+        name: First seen in Chapter 1
+        subheadings:
+          -
+            id: ambercard
+            name: Amber Card
+          -
+            id: dicebrace
+            name: Dice Brace
+          -
+            id: pinkribbon
+            name: Pink Ribbon
+          -
+            id: whiteribbon
+            name: White Ribbon
+          -
+            id: ironshackle
+            name: Iron Shackle
+          -
+            id: mousetoken
+            name: Mouse Token
+          -
+            id: jevilstail
+            name: Jevilstail
+      -
+        name: First seen in Chapter 2
+        subheadings:
+          -
+            id: silvercard
+            name: Silver Card
+          -
+            id: twinribbon
+            name: Twin Ribbon
+          -
+            id: glowwrist
+            name: Glow Wrist
+          -
+            id: chainmail
+            name: Chain Mail
+          -
+            id: bshotbowtie
+            name: B. Shot Bowtie
+          -
+            id: spikeband
+            name: Spike Band
+          -
+            id: silverwatch
+            name: Silver Watch
+          -
+            id: tensionbow
+            name: Tension Bow
+          -
+            id: mannequin
+            name: Mannequin
+          -
+            id: darkgoldband
+            name: Dark Gold Band
+          -
+            id: skymantle
+            name: Sky Mantle
+          -
+            id: spikeshackle
+            name: Spike Shackle
+          -
+            id: frayedbowtie
+            name: Frayed Bowtie
+          -
+            id: dealmaker
+            name: Dealmaker
+          -
+            id: royalpin
+            name: Royal Pin
+      -
+        name: First seen in Chapter 3
+        subheadings:
+          -
+            id: shadowmantle
+            name: Shadow Mantle
+          -
+            id: lodestone
+            name: Lode Stone
+          -
+            id: gingerguard
+            name: Ginger Guard
+          -
+            id: blueribbon
+            name: Blue Ribbon
+          -
+            id: tennatie
+            name: Tenna Tie
+      -
+        name: First seen in Chapter 4
+        subheadings:
+          -
+            id: waferguard
+            name: Waferguard
+          -
+            id: mysticband
+            name: Mystic Band
+          -
+            id: powerband
+            name: Power Band
+          -
+            id: princessribbon
+            name: Princess Ribbon
+          -
+            id: goldwidow
+            name: Gold Widow
 ---
 {% comment %}
 The value of global.submenu controls which editor you're in:
