--- a/misc/index.html
+++ b/misc/index.html
@@ -2,6 +2,19 @@
 title: Miscellaneous
 description: >
   <p>Pages that aren't story-specific or locked to a certain location.</p>
+toc:
+  -
+    id: possessions
+    name: Possessions
+#   -
+#     id: events
+#     name: Events
+  -
+    id: interface
+    name: Interface
+  -
+    id: other
+    name: Other
 ---
 <section class="d-section" id="possessions">
 	<h2>Possessions</h2>
@@ -33,7 +46,7 @@ description: >
 	</ul>
 </section>
 
-<section class="d-section" id="Other">
+<section class="d-section" id="other">
 	<h2>Other</h2>
 
 	<ul>
