--- a/misc/unused.html
+++ b/misc/unused.html
@@ -11,6 +11,20 @@ sources:
   -
     name: gml_GlobalScript_UNUSED
     chapters: [1, 2, 3, 4]
+
+toc:
+  -
+    id: chapter1
+    name: Chapter 1
+  -
+    id: chapter2
+    name: Chapter 2
+  -
+    id: chapter3
+    name: Chapter 3
+  -
+    id: chapter4
+    name: Chapter 4
 ---
 <section class="d-section" id="chapter1">
 	<h2>Chapter 1</h2>
